Adjust default .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,24 @@
-# Wordpress - ignore core, configuration, examples, uploads and logs.
-# https://github.com/github/gitignore/blob/main/WordPress.gitignore
+# /
+/languages
+/upgrade
+/debug.log
+/cache
 
-# Core
-#
-# Note: if you want to stage/commit WP core files
-# you can delete this whole section/until Configuration.
-/wp-admin/
-/wp-content/index.php
-/wp-content/languages
-/wp-content/plugins/index.php
-/wp-content/themes/index.php
-/wp-includes/
-/index.php
-/license.txt
-/readme.html
-/wp-*.php
-/xmlrpc.php
+# /uploads
+/uploads/cache
 
-# Configuration
-wp-config.php
+# /themes/
+/themes/default*
 
-# Example themes
-/wp-content/themes/twenty*/
+# /plugins/
+/plugins/query-monitor
 
-# Example plugin
-/wp-content/plugins/hello.php
+# Query monitor adds this symlink. See https://github.com/johnbillion/query-monitor/wiki/db.php-Symlink
+db.php
 
-# Uploads
-/wp-content/uploads/
-
-# Log files
-*.log
-
-# htaccess
-/.htaccess
-
-# All plugins
-#
-# Note: If you wish to whitelist plugins,
-# uncomment the next line
-#/wp-content/plugins
-
-# All themes
-#
-# Note: If you wish to whitelist themes,
-# uncomment the next line
-#/wp-content/themes
+# MacOS Files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
